--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@inertiajs/react": "^2.1.6",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
